scripts/nullaway/wpi/urld3c7d5e997_dku_rajkumar_java_api_for_amon_tgz-pJ8-org_json_TestJ8.txt
../wpi/urld3c7d5e997_dku_rajkumar_java_api_for_amon_tgz-pJ8-org_json_TestJ8/src/org/amon/AmonBuilder.java:46: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.errorMessage = throwable.getMessage();
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urld3c7d5e997_dku_rajkumar_java_api_for_amon_tgz-pJ8-org_json_TestJ8/src/org/json/JSONTokener.java:54: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.mySource = s;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urld3c7d5e997_dku_rajkumar_java_api_for_amon_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:376: error: [NullAway] passing @Nullable parameter 'ja.opt(i)' where @NonNull is required
                b.append(toString(ja.opt(i), (tagName == null) ? "array" : tagName));
                                        ^
    (see http://t.uber.com/nullaway )
../wpi/urld3c7d5e997_dku_rajkumar_java_api_for_amon_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:195: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urld3c7d5e997_dku_rajkumar_java_api_for_amon_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:231: error: [NullAway] dereferenced expression ja is @Nullable
        JSONObject jo = ja.optJSONObject(0);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urld3c7d5e997_dku_rajkumar_java_api_for_amon_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:209: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
